# ics-extractor

./: .gitignore  LICENSE  README.md  config.py  fix.sh  google_calendar.py  main.py  pyproject.toml  test.py
.github/workflows/: release.yml
