[project]
name = "ics-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalendar>=7.0.2",
    "pydantic>=2.12.5",
    "pypdf>=6.7.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
